<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ry.bakingapp.pages.home.MainActivity">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipecard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:listitem="@layout/list_item_recipecard" />

</RelativeLayout>
