...
                    android:textSize="15sp"
                    tools:text="Recipe Card" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipestep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            tools:listitem="@layout/list_item_recipe_step" />
    </LinearLayout>

...
